--- a/src/anking_notetypes/note_types/Physeo-IO one by one/Styling.css
+++ b/src/anking_notetypes/note_types/Physeo-IO one by one/Styling.css
@@ -60,7 +60,7 @@ kbd {
 /*~~~~~~~MAX IMAGE HEIGHT/WIDGTH~~~~~~~*/
 img {
   max-height: none;
-  max-width: 85%;
+  max-width: 100%; /* note: changing this may impact the occlusions */
 }
 
 
