--- a/src/anking_notetypes/note_types/AnKing/Styling.css
+++ b/src/anking_notetypes/note_types/AnKing/Styling.css
@@ -1,4 +1,4 @@
-/*    CLOZE-ANKING NOTETYPE VERSION 10   */
+/*    ANKING NOTETYPE  */
 
 /*The AnKing wishes you the best of luck! Be sure to check out our youtube channel 
 for all things Anki and Pre-med/Med School related 
