--- a/src/anking_notetypes/note_types/AnKingMCAT/AnKing Custom Styling.css
+++ b/src/anking_notetypes/note_types/AnKingMCAT/AnKing Custom Styling.css
@@ -1,4 +1,5 @@
-/*~~~~~~~~USER CUSTOMIZATION START~~~~~~~~~*/
+/*#########################################################
+################  USER CUSTOMIZATION START  ##############*/
 /* You can choose colors at www.htmlcolorcodes.com */
 
 /* TIMER ON/OFF */
