--- a/src/anking_notetypes/note_types/AnKingOverhaul/Styling.css
+++ b/src/anking_notetypes/note_types/AnKingOverhaul/Styling.css
@@ -1,4 +1,4 @@
-/*    ANKINGMASTER-v3   */
+/*    ANKINGOVERHAUL   */
 
 /* The AnKing wishes you the best of luck! Be sure to check out our YouTube channel and Instagram
  for all things Anki and Med School related (including how to customize this card type and use these decks):  
