--- a/src/anking_notetypes/note_types/Physeo-Cloze/Styling.css
+++ b/src/anking_notetypes/note_types/Physeo-Cloze/Styling.css
@@ -60,10 +60,10 @@ kbd {
 }
 
 
-/*~~~~~~~MAX IMAGE HEIGHT/WIDGTH~~~~~~~*/
+/*~~~~~~~MAX IMAGE HEIGHT/WIDTH~~~~~~~*/
 img {
-  max-height: none;
   max-width: 85%;
+  max-height: 100%;
 }
 
 /*~~~~~~~~~COLORS~~~~~~~~~/
