--- a/src/anking_notetypes/note_types/AnKing/Styling.css
+++ b/src/anking_notetypes/note_types/AnKing/Styling.css
@@ -61,10 +61,10 @@ kbd {
 }
 
 
-/*~~~~~~~MAX IMAGE HEIGHT/WIDGTH~~~~~~~*/
+/*~~~~~~~MAX IMAGE HEIGHT/WIDTH~~~~~~~*/
 img {
-  max-height: none;
   max-width: 85%;
+  max-height: 100%;
 }
 
 
