--- a/src/anking_notetypes/note_types/AnKingMCAT/AnKing Custom Styling.css
+++ b/src/anking_notetypes/note_types/AnKingMCAT/AnKing Custom Styling.css
@@ -70,9 +70,9 @@ kbd {
   font-family: Arial Greek, Arial; /*Step exam's font is Arial Greek*/
 }
 
-/*~~~~~~~MAX IMAGE HEIGHT/WIDGTH~~~~~~~*/
+/*~~~~~~~MAX IMAGE HEIGHT/WIDTH~~~~~~~*/
 img {
-  max-height: none;
+  max-height: 100%;
 }
 
 #extra img, 
