--- a/src/anking_notetypes/note_types/AnKingMCAT/Styling.css
+++ b/src/anking_notetypes/note_types/AnKingMCAT/Styling.css
@@ -64,9 +64,10 @@ kbd {
   font-family: Menlo, baskerville, sans; /*Step exam's font is Arial Greek*/
 }
 
-/*~~~~~~~MAX IMAGE HEIGHT/WIDGTH~~~~~~~*/
+/*~~~~~~~MAX IMAGE HEIGHT/WIDTH~~~~~~~*/
 img {
-  max-height: none;
+  max-width: 85%;
+  max-height: 100%;
 }
 
 #extra img, 
