--- a/src/anking_notetypes/note_types/AnKingOverhaul/Styling.css
+++ b/src/anking_notetypes/note_types/AnKingOverhaul/Styling.css
@@ -88,9 +88,10 @@ kbd {
   font-family: Arial Greek, Arial; /*Step exam's font is Arial Greek*/
 }
 
-/*~~~~~~~MAX IMAGE HEIGHT/WIDGTH~~~~~~~*/
+/*~~~~~~~MAX IMAGE HEIGHT/WIDTH~~~~~~~*/
 img {
-  max-height: none;
+  max-width: 85%;
+  max-height: 100%;
 }
 
 #extra img,
