--- a/ts/style/base.scss
+++ b/ts/style/base.scss
@@ -8,11 +8,11 @@
   visibility: hidden;
 }
 
-.closet-delay {
+.anking-delay {
   visibility: hidden;
 }
 
-.closet-log {
+.anking-log {
   color: black;
   background-color: rgb(255, 147, 40);
 
