--- a/ts/style/editor.scss
+++ b/ts/style/editor.scss
@@ -2,10 +2,10 @@
 
 img {
   max-width: 100% !important;
-  max-height: var(--closet-max-height);
+  max-height: var(--anking-closet-max-height);
 }
 
-.closet-select-mode {
+.anking-select-mode {
   /* slightly below top */
   vertical-align: 20%;
   /* night-mode fix */
